# QuantumComputing

./: .gitignore  01_hello_qubit.ipynb  03_adiabatic_QC.ipynb  04_run_ibm.ipynb  04_run_simulator.ipynb  05_bell.ipynb  06_QKD.ipynb  07_QPD.ipynb  08_Grover.ipynb  09_QSC.ipynb  10_Noise.ipynb  README.md  pyproject.toml
LAB1/: tasks.ipynb
LAB2/: tasks.ipynb
LAB4/: tasks_without_cloud_access.ipynb
